--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   <div id="root"></div>
   <script type="module" src="./src/main.jsx"></script>
   <script src="https://website-widgets.pages.dev/dist/sienna.min.js" defer></script>
-  
+  <!-- <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      document.body.style.zoom = "90%";
+    });
+  </script> -->
 </body>
 
 </html>
